[metadata]
name = git-ptt
version = attr: git_ptt.__version__
description = Tool for managing stacked GitHub pull requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/git-ptt/
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click
    GitPython

[options.entry_points]
console_scripts =
    git-ptt = git_ptt.main:main
